--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@vitejs/plugin-legacy": "^7.2.1",
     "sass": "^1.97.3",
+    "sharp": "^0.34.5",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0"
   },
