--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # Supabase Configuration
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+
+ # Supabase Edge Functions Configuration
+ RESEND_API_KEY=your_resend_api_key
+ BASE_URL=http://localhost:3000 or app URL when deployed
