--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Developement dockument files
+development-docs/Issues
+development-docs/Plans
+development-docs/Research
